--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@ body:after {
         </div>
      </div>
      
-  <div class="col-md-8 offset-md-2 row square_box">
-       <div class="col-sm-4 square_image visible"><a target="_blank" href="https://www.linkedin.com/in/hersh-chen-95b8b3210/"><img src="image/social-media/linkedin.png"></a></div>
-       <div class="col-sm-4 square_image visible"><a target="_blank" href="https://www.instagram.com/hungyue_0904/"><img src="image/social-media/instagram.png"></a></div>
-       <div class="col-sm-4 square_image visible"><a target="_blank" href="https://www.facebook.com/polar790904/"><img src="image/social-media/facebook.png"></a></div>
+  <div class="col-md-8 offset-md-2 square_box text-center">
+       <div class="col-md-4 square_image visible"><a target="_blank" href="https://www.linkedin.com/in/hersh-chen-95b8b3210/"><img src="image/social-media/linkedin.png"></a></div>
+       <div class="col-md-4 square_image visible"><a target="_blank" href="https://www.instagram.com/hungyue_0904/"><img src="image/social-media/instagram.png"></a></div>
+       <div class="col-md-4 square_image visible"><a target="_blank" href="https://www.facebook.com/polar790904/"><img src="image/social-media/facebook.png"></a></div>
   </div>    
   </section>
   
