--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@ body:after {
       <span>2021 - Present</span>
    </div> 
    <div class="col-md-4 col-sm-10 col-10 text-left" class="" id="resume_text">
-    <span>Product Manager</span>
+    <pre>Product Manager</pre>
     <p>
       <ul>
       <li>Project management</li>
@@ -106,7 +106,7 @@ body:after {
     <span>2017 - 2021</span>
    </div> 
    <div class="col-md-4 col-sm-10 col-10 text-left" class="" id="resume_text">
-     <span>Sales Engineer</span>
+     <pre>Sales Engineer</pre>
     <p>
     <ul>
       <li>Customer development</li>
@@ -127,7 +127,7 @@ body:after {
    <span>2013 - 2017</span>
   </div> 
   <div class="col-md-4 col-sm-10 col-10 text-left" class="" id="resume_text">
-    <span>Product Desinger</span>
+    <pre>Product Desinger</pre>
    <p>
     <ul>
     <li>Modification of product mechanism and development</li>
@@ -153,7 +153,7 @@ body:after {
         <span>2005 - 2008</span>
      </div> 
      <div class="col-md-4 col-sm-10 col-10 text-left" class="" id="resume_text_black">
-      <span>AUEST |<br>Bachelor's Degree</span>
+      <pre>AUEST |<br>Bachelor's Degree</pre>
       <p>Department of Industrial and Commercial design
         <ul>
         <li>2012 AUEST YODEX "Liang Shan Project" Organizer</li>
@@ -172,7 +172,7 @@ body:after {
       <span>2017 - 2021</span>
      </div> 
      <div class="col-md-4 col-sm-10 col-10 text-left" class="" id="resume_text_black">
-       <span>SSVS |<br>Associate Degree</span>
+       <pre>SSVS |<br>Associate Degree</pre>
       <p>Department of Interior Design
       <ul> 
       <li>2008 Architecture Drawing Class C</li>
@@ -187,12 +187,15 @@ body:after {
     <div class="col-md-12 text-center skills" id="skills">    
        <div style="position:relative" class="row">
     
-       <div class="col-md-3 col-sm-8 col-8 offset-md-1 offset-sm-3 offset-1 text-left" class="resume_title" id="resume_title">
+       <div class="col-md-3 col-sm-8 col-8 offset-md-1 text-left" class="resume_title" id="resume_title">
         Skills <br>
         & Expertise
        </div>
-       <div class="col-md-6 col-sm-10 col-10 offset-md-1  text-left" class="" id="resume_text">
-         <span>• Problem Solving</span>
+       <div class="col-md-2 col-sm-10 col-10 offset-md-1 text-left" class="" id="resume_text">
+        <span></span>
+       </div> 
+       <div class="col-md-4 col-sm-10 col-10 text-left" class="" id="resume_text">
+         <pre>• Problem Solving</pre>
         <p>Design is about constantly finding problems and solving them. It requires a keen observation of life and unlimited creativity of ideas to solve problems. In the workplace, we need to be observant, imaginative, and creative to solve our clients' problems, and even to identify and propose solutions to problems before they do.</p>
        </div>
 
@@ -202,7 +205,7 @@ body:after {
        <span></span>
       </div> 
       <div class="col-md-4 col-sm-10 col-10 text-left" class="" id="resume_text">
-        <span>• Communication Arts</span>
+        <pre>• Communication Arts</pre>
        <p>With experience in project management and sales, I have been exposed to a wide range of positions in various industries, from engineers who don't speak human language to company bosses in purchasing, R&D managers, and junior operators, giving me the ability to understand, be bold, articulate, and responsive, and not be afraid to communicate with any person in any position.</p>
       </div>
 
@@ -212,7 +215,7 @@ body:after {
         <span></span>
      </div> 
      <div class="col-md-4 col-sm-10 col-10 text-left" class="" id="resume_text">
-      <span>• Copy & Content Writer</span>
+      <pre>• Copy & Content Writer</pre>
       <p>Word sensitivity, observation, and judgment in querying bids Writing copy for target programs in marketing to attract customer inquiries and increase purchase intent, and to assist in the production of related Assist in the production of product guidebooks.</p>
      </div>
     
