--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ body:after {
     <!--DesignerInfo--> 
        <div class="col-md-8 text-left" class="name_info" id="name_info">
        <h1>A few facts about myself</h1>
-       <p>Experienced Marketing Consultant with a demonstrated history of working in the international trade and development industry. With strong marketing skills in Search Engine Optimization (SEO), Website optimization UXUI - WordPress, Event Management, Google ads, Email Marketing, Marketing Automation, and B2B marketing. Excellent problem-solving and communication.</p>
+       <p>Experienced Marketing Specialist with a demonstrated history of working in the international trade and development industry. With strong marketing skills in Search Engine Optimization (SEO), Website optimization UXUI - WordPress, Event Management, Google ads, Email Marketing, Marketing Automation, and B2B marketing. Excellent problem-solving and communication.</p>
+       <p>Myers-Briggs Type Indicator(MBTI) : INFJ-T</p>
 
        </div>
     <!--DesignerInfo--> 
