--- a/contact001.html
+++ b/contact001.html
@@ -11,7 +11,7 @@
 <script src="js/popper.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
 
-<script src="js/validation.js"></script>
+<script src="validation.js"></script>
 
 
 <!--bootstrap-->
